# lyra

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  PROMPT.md  README.md
.gitea/workflows/: docker.yaml
.zed/: settings.json
docs/: commits.md
docs/reference/: agdb.md  mlua.md
harmony-core/: Cargo.toml
harmony-core/src/: async.rs  lib.rs  luaurc.rs  plugin.rs
harmony-core/src/require/: engine.rs  mod.rs  tests.rs
harmony-crypt/: Cargo.toml
harmony-crypt/src/: lib.rs
harmony-globals/: Cargo.toml
harmony-globals/src/: lib.rs
harmony-http/: Cargo.toml
harmony-http/src/: lib.rs
harmony-json/: Cargo.toml
harmony-json/src/: lib.rs
harmony-luau/: Cargo.toml
harmony-luau/src/: lib.rs
harmony-macros/: Cargo.toml
harmony-macros/src/: compile.rs  lib.rs  load.rs
harmony-macros/tests/: luau_docs.rs
harmony-net/: Cargo.toml
harmony-net/src/: lib.rs
harmony-task/: Cargo.toml
harmony-task/src/: lib.rs
lyra-chromaprint/: Cargo.toml
lyra-chromaprint/src/: fingerprint.rs  lib.rs
lyra-ffmpeg/: Cargo.toml
lyra-ffmpeg/src/: audio.rs  context.rs  error.rs  lib.rs  output.rs
lyra-harmony-test/: Cargo.toml
lyra-harmony-test/src/: cached_http.rs  generate.rs  main.rs  runner.rs  test_case.rs
lyra-metadata/: Cargo.toml
lyra-metadata/src/: artists.rs  coalesce.rs  context.rs  filename.rs  lib.rs  path.rs  year.rs
lyra-server/: Cargo.toml  build.rs
lyra-server/src/: config.rs  lib.rs  locale.rs  main.rs  testing.rs
lyra-server/src/db/: api_keys.rs  artists.rs  bootstrap.rs  compact.rs  covers.rs  credits.rs  datastore.rs  entities.rs  entries.rs  favorites.rs  genres.rs  graph.rs  ids.rs  indexes.rs  labels.rs  libraries.rs  listens.rs  lookup.rs  lyrics.rs  mixers.rs  mod.rs  playback_sessions.rs  playlists.rs  process_lock.rs  releases.rs  roles.rs  search.rs  server.rs  settings.rs  tags.rs  test_db.rs  track_sources.rs  tracks.rs  users.rs
lyra-server/src/db/artists/: mod.rs  relations.rs
lyra-server/src/db/cue/: mod.rs  sheets.rs  tracks.rs
lyra-server/src/db/metadata/: layers.rs  mapping_config.rs  mod.rs
lyra-server/src/db/providers/: external_ids.rs  mod.rs
lyra-server/src/plugins/: artists.rs  auth.rs  bootstrap.rs  chromaprint.rs  covers.rs  datastore.rs  docs.rs  entities.rs  entries.rs  favorites.rs  genres.rs  globals.rs  ids.rs  images.rs  labels.rs  libraries.rs  lifecycle.rs  listens.rs  lyrics.rs  mix.rs  mod.rs  playback_sources.rs  playlists.rs  releases.rs  server.rs  surfaces.rs  tags.rs  track_sources.rs  tracks.rs  users.rs
lyra-server/src/plugins/api/: dispatch.rs  image.rs  mod.rs  registry.rs  response.rs  transport.rs  websocket.rs
lyra-server/src/plugins/metadata/: covers.rs  ensure.rs  helpers.rs  layers.rs  lyrics.rs  mod.rs
lyra-server/src/plugins/playback_sessions/: mod.rs  remote.rs  sessions.rs
lyra-server/src/plugins/runtime/: mod.rs  settings.rs
lyra-server/src/routes/: app.rs  artists.rs  covers.rs  entries.rs  error.rs  favorites.rs  genres.rs  labels.rs  libraries.rs  listens.rs  metadata.rs  mix.rs  mod.rs  playback_sessions.rs  playlists.rs  plugins.rs  providers.rs  registry.rs  releases.rs  responses.rs  roles.rs  search.rs  server.rs  tags.rs  tracks.rs  users.rs
lyra-server/src/routes/serve/: download.rs  hls.rs  mod.rs  ranged_file.rs  stream.rs
lyra-server/src/routes/ws/: mod.rs
lyra-server/src/services/: artists.rs  cors.rs  entries.rs  favorites.rs  maintenance.rs  mod.rs  options.rs  origin.rs  playback_sources.rs  playlists.rs  plugin_settings.rs  releases.rs  search.rs  startup.rs  storage_monitor.rs  tags.rs  tracks.rs
lyra-server/src/services/auth/: api_keys.rs  mod.rs  sessions.rs
lyra-server/src/services/covers/: image.rs  mod.rs  providers.rs  resolve.rs  sync.rs
lyra-server/src/services/entities/: context.rs  mod.rs  projection.rs
lyra-server/src/services/entities/projection/: credits.rs  mod.rs
lyra-server/src/services/hls/: cleanup.rs  codec.rs  init.rs  mod.rs  signing.rs  state.rs
lyra-server/src/services/libraries/: configured.rs  mod.rs  orchestrator.rs  scanning.rs  sync.rs
lyra-server/src/services/metadata/: cleanup.rs  cue.rs  layers.rs  mapping.rs  mapping_admin.rs  merging.rs  mod.rs  model.rs  verification.rs
lyra-server/src/services/metadata/ingestion/: artists.rs  mod.rs  releases.rs  tracks.rs
lyra-server/src/services/metadata/lyrics/: mod.rs  providers.rs  scorer.rs  selection.rs  upload.rs
lyra-server/src/services/mix/: mod.rs  registry.rs
lyra-server/src/services/playback_sessions/: mod.rs  sessions.rs  updates.rs  workflow.rs
lyra-server/src/services/providers/: admin.rs  capture.rs  dedup.rs  mod.rs  refresh.rs  registry.rs  sync.rs
lyra-server/src/services/remote/: connection.rs  constants.rs  messages.rs  mod.rs  registry.rs
lyra-server/tests/assets/metadata/: integration_track.flac
lyra-server/tests/assets/metadata/multi/: multi_track_1.flac  multi_track_2.flac
plugins/audiomuse/: init.luau  jellyfin_hex.luau  plugin.json
plugins/jellyfin/: constants.luau  encoding.luau  init.luau  plugin.json
plugins/jellyfin/protocol/: discovery.luau  lyrics.luau  preferences.luau  session.luau  statics.luau  websocket.luau
plugins/listenbrainz/: init.luau  plugin.json
plugins/lrclib/: init.luau  plugin.json
plugins/musicbrainz/: init.luau  plugin.json
plugins/musicbrainz/resolution/: acoustid.luau  json_helpers.luau  lookup.luau  release_search.luau  text_helpers.luau  track_helpers.luau
plugins/musicbrainz/tests/: 02_various_artists.toml  212_nameless_とあ.toml  212_ボカロvercd_nameless_とあ.toml  25_eill.toml  3650_bentham.toml  adoのベストアドバム_ado.toml  again_beverly.toml  aijanai_dazbee.toml  akasaki_18才_akasaki.toml  all_time_rock_n_roll_鈴木雅之.toml  ambitions_one_ok_rock.toml  ao_to_natsu_mrs_green_apple.toml  asleep_among_endives_ichiko_aoba.toml  assort_novelbright.toml  attack_on_titan_season_2_original_soundtrack_hiroyuki_sawano.toml  balalaika_9lana.toml  balcony_penthouse.toml  bet_da_ice.toml  (+329 more)
plugins/theaudiodb/: init.luau  plugin.json
plugins/wikidata/: init.luau  plugin.json
(+2115 files in other folders)
