[workspace]
members = [
	"harmony-core",
	"harmony-crypt",
	"harmony-globals",
	"harmony-http",
	"harmony-json",
	"harmony-luau",
	"harmony-macros",
	"lyra-chromaprint",
	"lyra-ffmpeg",
	"lyra-metadata",
	"lyra-server",
	"harmony-task",
	"harmony-net",
	"lyra-harmony-test",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = "1.8"
ffmpeg-sys-next = "8.0"
json5 = { git = "https://github.com/StayBlue/json5-rs.git", rev = "3bf73f7937c9e4db7c19564e22fa8168404c75c0" }
mlua = { package = "mluau", git = "https://github.com/mluau/mluau", features = ["luau", "anyhow"] }
mlua_scheduler = { git = "https://github.com/mluau/scheduler", rev = "585795be51809c5f25044b1e833bef42fac77c45", features = ["send"] }
percent-encoding = "2"
reqwest = { version = "0.13", default-features = false, features = ["charset", "http2", "json", "rustls-no-provider", "system-proxy"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
url = "2"
xxh3 = { git = "https://github.com/cberner/xxh3", rev = "73c81b90a5d42c6e48c1c26b75ac4bdf1fe1113f" }

[profile.dev.package."*"]
opt-level = 2
