[package]
name = "harmony-core"
version = "0.0.1"
edition = "2024"
license-file = "../LICENSE"

[dependencies]
anyhow = { workspace = true }
mlua = { workspace = true, features = ["luau", "anyhow", "send", "macros"] }
mlua_scheduler = { workspace = true, features = ["send"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
json5 = { workspace = true }
tracing = { workspace = true }
