[package]
name = "harmony-crypt"
version = "0.0.1"
edition = "2024"
license-file = "../LICENSE"

[dependencies]
harmony-core = { path = "../harmony-core" }
harmony-luau = { path = "../harmony-luau" }
anyhow = { workspace = true }
mlua = { workspace = true, features = ["luau", "anyhow"] }
base64 = { workspace = true }
md5 = "0.8"
sha1 = "0.10"
sha2 = "0.10"
xxh3 = { workspace = true }
rand = "0.10"
