[package]
name = "harmony-task"
version = "0.0.1"
edition = "2024"
license-file = "../LICENSE"

[dependencies]
harmony-core = { path = "../harmony-core" }
harmony-luau = { path = "../harmony-luau" }
anyhow = { workspace = true }
mlua = { workspace = true, features = ["luau", "anyhow"] }
mlua_scheduler = { workspace = true, features = ["send"] }
