[package]
name = "lyra-harmony-test"
version = "0.0.1"
edition = "2024"
license-file = "../LICENSE"

[[bin]]
name = "lyra-harmony-test"
path = "src/main.rs"

[dependencies]
harmony-core = { path = "../harmony-core" }
harmony-http = { path = "../harmony-http" }
lyra-server = { path = "../lyra-server" }
lyra-metadata = { path = "../lyra-metadata" }
mlua = { workspace = true, features = ["luau", "anyhow", "send", "macros", "serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "1.0"
reqwest = { workspace = true, default-features = false, features = ["charset", "http2", "json", "rustls-no-provider", "system-proxy"] }
rustls = { workspace = true, default-features = false, features = ["ring", "std", "tls12"] }
xxh3 = { workspace = true }
percent-encoding = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
